cmake_minimum_required (VERSION 3.0)

#get files
FILE(GLOB FILES_WSDL wsdl/*.*)

FILE(GLOB FILES_ONVIF RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} onvif/*.*)
FILE(GLOB_RECURSE FILES_DIRS_SUDS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} suds/*.*)
FILE(GLOB FILES_SUDS_PASSWORDDIGEST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} suds_passworddigest/*.*)

set(EXTRA_FILES ${FILES_ONVIF} ${FILES_DIRS_SUDS} ${FILES_SUDS_PASSWORDDIGEST})

AgoPythonProgram(onvif
    DESCRIPTION "ago control for onvif devices"
    EXTRA_FILES "${EXTRA_FILES}")

# wsdl
install (DIRECTORY DESTINATION /etc/onvif/wsdl)
install (FILES ${FILES_WSDL} DESTINATION /etc/onvif/wsdl)
