cmake_minimum_required (VERSION 3.0)

install (PROGRAMS agotellstick.py DESTINATION ${BINDIR})
install (PROGRAMS tellstickbase.py DESTINATION ${BINDIR})
install (PROGRAMS tellstickduo.py DESTINATION ${BINDIR})
install (PROGRAMS tellsticknet.py DESTINATION ${BINDIR})
install (PROGRAMS tellstick_auth.py DESTINATION ${BINDIR})
install (PROGRAMS td.py DESTINATION ${BINDIR})



